Implement service and appointment models with admin registration; update settings for environment variable support

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,6 @@
 DEBUG=True
 SECRET_KEY=sua_chave_here
 ALLOWED_HOSTS = '*' # qualquer endereço consegue ser host
+DB_NAME=booking_db
+DB_USER=usuario
+DB_PASSWORD=senha
